# leviathan-rs

./: .gitignore  ABI.md  Cargo.toml  LANGUAGE.md  README.md  TODO.md  main.lvt  test.lvt
crates/cli/: Cargo.toml
crates/cli/src/: disasm.rs  main.rs  project.rs
crates/compiler/: Cargo.toml  README.md
crates/compiler/src/: lib.rs  main.rs
crates/compiler/src/compiler/: error.rs  mod.rs
crates/compiler/src/parser/: ast.rs  error.rs  (+2 more)
crates/ir/: Cargo.toml  README.md
crates/ir/src/: binary.rs  lib.rs  util.rs
leviathan/: Cargo.toml
leviathan-cli/: Cargo.toml
leviathan-cli/src/: main.rs
leviathan-common/: Cargo.toml
leviathan-common/src/: error.rs  lib.rs  reader.rs  structure.rs  util.rs
leviathan-common/src/parser/: mod.rs  reader.rs  source.rs
leviathan-compiler/: Cargo.toml
leviathan-compiler/src/: bytecode.rs  lib.rs  resolver.rs  rt.rs  std.rs
leviathan-parser/: Cargo.toml
leviathan-parser/src/: lib.rs  source_parser.rs  structure_parser.rs  util.rs
leviathan-runtime/: Cargo.toml
leviathan-runtime/src/: bytecode.rs  lib.rs
leviathan-source/: Cargo.toml
leviathan-source/src/: callbacks.rs  error.rs  grouper.rs  lib.rs  parser.rs  source.rs  state.rs
leviathan/src/: error.rs  lib.rs  parser.rs  util.rs
src/: ast.rs  compiler.rs  grouper.rs  lib.rs  main.rs  parser.rs  resolver.rs  tokenizer.rs  util.rs
src/compiler/: collecting.rs  error.rs  intermediary.rs  mod.rs
src/compiler/mod_type/: assembly.rs
src/parser/: ast.rs  error.rs  mod.rs  tokenizer.rs
src/util/: ariadne.rs  mod.rs  source.rs
std/: bin.lvt  math.lvt
(+25 files in other folders)
