[package]
name = "leviathan-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
leviathan-parser = { path = "../leviathan-parser" }
#leviathan = { path = "../leviathan" }
leviathan-common = { path = "../leviathan-common" }
leviathan-compiler = { path = "../leviathan-compiler" }
clap = { version = "4.0.22", features = ["derive"] }
