[package]
name = "leviathan-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
leviathan-compiler = { path = "../compiler" }
leviathan-ir = { path = "../ir" }
clap = { version = "4.1.11", features = ["cargo"] }
serde = { version = "1.0.158", features = ["derive"] }
toml = "0.7.3"
urban-common = { git = "https://github.com/sqyyy-jar/urban-engine.git" }
byteorder = "1.4.3"
yansi = "0.5.1"

[build-dependencies]
chrono = "0.4.24"

[[bin]]
name = "lvt"
path = "src/main.rs"
